# vitrine

./: .gitignore  .~lock.gallery-viewer-plan.pptx#  Cargo.toml  PLAN.md  README.md  meson.build  meson_options.txt
.claude/: settings.local.json.tmp.206834.c7cda23e3719
.github/workflows/: ci.yml
Troubleshoot/: HANDOFF-2026-07-21.md  ISSUES.md  Observations.md
build-aux/: cargo-build.sh  cargo-sources.json  checks.sh  debug-run.sh  io.github.superuser_miguel.Vitrine.release.yml  io.github.superuser_miguel.Vitrine.yml
crates/vitrine-app/: Cargo.toml  build.rs
crates/vitrine-app/examples/: decode_probe.rs
crates/vitrine-app/src/: config.rs.in  debug.rs  decode.rs  edit.rs  grid_cell.rs  image_object.rs  index.rs  main.rs  preferences.rs  script.rs  settings.rs  thumbnails.rs  viewer.rs  window.rs
crates/vitrine-engine/: Cargo.toml
crates/vitrine-engine/src/: annotations.rs  backup.rs  cache_evict.rs  collections.rs  db.rs  dedup.rs  exif.rs  files.rs  hash.rs  lib.rs  lru.rs  png_meta.rs  query.rs  resize.rs  scanner.rs  schema.rs  tags.rs  thumbnail_cache.rs  xmp.rs
data/: io.github.superuser_miguel.Vitrine.desktop.in.in  io.github.superuser_miguel.Vitrine.metainfo.xml.in.in  meson.build  resources.gresource.xml  style.css
data/ui/: grid_cell.blp  viewer.blp  window.blp
docs/: debugging-vitrine.html  duplicates-that-arent.html  flatpak-document-portal.html  index.html
docs/scripts/: natural-sort.lua
po/: POTFILES.in
tests/: thumbnail-popin-tests.md
tests/fixtures/: generate.py
