[package]
name = "vitrine-app"
description = "GTK4 / libadwaita shell for Vitrine — a catalog-aware image browser + reviewer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "vitrine"

[[bin]]
name = "vitrine"
path = "src/main.rs"

[dependencies]
# gtk4 >= 4.14 (PLAN §3). Imported as `gtk`; it re-exports gio & glib.
gtk = { version = "0.11", package = "gtk4", features = ["v4_14"] }
# libadwaita >= 1.5 (AdwAboutDialog etc.). Imported as `adw`.
adw = { version = "0.9", package = "libadwaita", features = ["v1_5"] }
# i18n from commit one so Blueprint `_()` strings translate once po/ fills in.
gettext-rs = { version = "0.7", features = ["gettext-system"] }
# The UI-free core (PLAN §1 house rule 2).
vitrine-engine = { workspace = true }
# Sandboxed subprocess-per-image decode (PLAN §3). The `gdk4` feature yields
# `Frame::texture() -> gdk::Texture`; its gdk4 must match our gtk4 (both 0.11).
glycin = { version = "3.1", features = ["gdk4"] }
async-lock = "3.4.2"
async-channel = "2.5.0"
# mallopt(M_MMAP_THRESHOLD) at startup — see main.rs; Linux-only app (GNOME).
libc = "0.2"
mlua = { version = "0.12.0", features = ["lua54", "send", "vendored"] }
# ashpd (XDG portals) is added when the extra-roots chooser lands.
