[package]
name = "vitrine-engine"
description = "UI-free core for Vitrine: index, hashing, scanning, dedup and query logic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# HARD BOUNDARY (PLAN §1 house rule 2): no gtk4 / glib / gio / libadwaita /
# ashpd here, ever. Enforced by build-aux/checks.sh and CI. This crate deals
# only in plain paths, byte streams, SQLite rows, and data types.
[dependencies]
md-5 = "0.11.0"
